--- a/Preethi/calculate_client_security_hash_2021_preethi/SHA1Online/SHA1_Online_Get_Hash_code.xaml
+++ b/Preethi/calculate_client_security_hash_2021_preethi/SHA1Online/SHA1_Online_Get_Hash_code.xaml
@@ -64,7 +64,6 @@
       <AssemblyReference>System.Memory</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="SHA1_Online_Get_Hash_code" sap:VirtualizedContainerService.HintSize="476,949" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -122,7 +121,7 @@
             </ui:Click>
             <ui:GetValue ContinueOnError="{x:Null}" DisplayName="Get Hash Result" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="GetValue_1">
               <ui:GetValue.Target>
-                <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="44d3ae5e-e0cb-4f13-868f-efe8bce459c4" InformativeScreenshot="256b7bacde23c6d57c6cd4f3aa79c860" Selector="&lt;webctrl tag='SPAN' /&gt;" WaitForReady="COMPLETE">
+                <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="44d3ae5e-e0cb-4f13-868f-efe8bce459c4" InformativeScreenshot="256b7bacde23c6d57c6cd4f3aa79c860" Selector="&lt;webctrl tag='INPUT' id='textToHashId' name='textToHash' type='text' /&gt;" WaitForReady="COMPLETE">
                   <ui:Target.TimeoutMS>
                     <InArgument x:TypeArguments="x:Int32" />
                   </ui:Target.TimeoutMS>
