--- a/Preethi/calculate_client_security_hash_2021_preethi/System1/Navigate_Dashboard.xaml
+++ b/Preethi/calculate_client_security_hash_2021_preethi/System1/Navigate_Dashboard.xaml
@@ -60,7 +60,7 @@
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe ACME'" sap:VirtualizedContainerService.HintSize="434,344" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="3999e9ffbadc7a05d5f82963b073134c" Selector="&lt;html app='chrome.exe' title='ACME System 1 - Dashboard' /&gt;">
+      <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe ACME'" sap:VirtualizedContainerService.HintSize="434,344" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="3999e9ffbadc7a05d5f82963b073134c" Selector="&lt;html app='chrome.exe' title='ACME System 1*' /&gt;">
         <ui:BrowserScope.Body>
           <ActivityAction x:TypeArguments="x:Object">
             <ActivityAction.Argument>
@@ -84,7 +84,7 @@
                   </ui:CursorPosition>
                 </ui:Click.CursorPosition>
                 <ui:Click.Target>
-                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="a0a3cd06-8138-42c9-b313-5cabc1a6f524" InformativeScreenshot="d30fa2f383e7a0a7745cbc707f40cb69" Selector="&lt;webctrl aaname='Home' css-selector='body&amp;gt;div&amp;gt;div&amp;gt;div&amp;gt;ol&amp;gt;li&amp;gt;a' tag='A' /&gt;">
+                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="a0a3cd06-8138-42c9-b313-5cabc1a6f524" InformativeScreenshot="d30fa2f383e7a0a7745cbc707f40cb69" Selector="&lt;webctrl aaname='Home' tag='A' href='https://acme-test.uipath.com/home' innertext='Home' /&gt;">
                     <ui:Target.TimeoutMS>
                       <InArgument x:TypeArguments="x:Int32" />
                     </ui:Target.TimeoutMS>
