--- a/Preethi/calculate_client_security_hash_2021_preethi/System1/System1_Update_WorkItems.xaml
+++ b/Preethi/calculate_client_security_hash_2021_preethi/System1/System1_Update_WorkItems.xaml
@@ -104,7 +104,7 @@
       </sap:WorkflowViewStateService.ViewState>
       <ui:TypeInto AlterIfDisabled="{x:Null}" ClickBeforeTyping="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" EmptyField="{x:Null}" SendWindowMessages="{x:Null}" SimulateType="{x:Null}" Activate="True" DisplayName="Type Into 'TEXTAREA  newComment'" sap:VirtualizedContainerService.HintSize="376,134" sap2010:WorkflowViewState.IdRef="TypeInto_11" Text="[comment]">
         <ui:TypeInto.Target>
-          <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="5473bfc0-e390-45ad-855a-68290df895ea" InformativeScreenshot="8ac518961abc2fd54257559e80b64306" Selector="&lt;html app='chrome.exe' htmlwindowname='WI-Update' title='ACME System 1' /&gt;&lt;webctrl tag='TEXTAREA' /&gt;">
+          <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="5473bfc0-e390-45ad-855a-68290df895ea" InformativeScreenshot="8ac518961abc2fd54257559e80b64306" Selector="&lt;html app='chrome.exe' htmlwindowname='WI-Update' title='ACME System 1' /&gt;&lt;webctrl tag='TEXTAREA' id='newComment' name='newComment' type='text' /&gt;">
             <ui:Target.TimeoutMS>
               <InArgument x:TypeArguments="x:Int32" />
             </ui:Target.TimeoutMS>
